# maptroid

./: .gitattributes  .gitignore  README.md  install.sh  load_map.py
server/: hash_to_letter.json  install.sh  labbook.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  uwsgi.ini
server/contact/: admin.py  forms.py  models.py  views.py
server/main/: smur.py  urls.py  views.py
server/maptroid/: admin.py  apps.py  cre.py  doors.py  dread.py  dzi.py  forms.py  icons.py  models.py  ocr.py  plm.py  rectangle.py  shapes.py  sm.py  smile.py  utils.py  views.py
server/scripts/: 1-import_smile.py  2-process_sm.py  3-plm_crop.py  3b-finalize-plm.py  4-plm_sprites.py  5-sm_items.py  6-bts_sprites.py  7-finalize.py  7-map-icon.py  _26.sh  _autozone.py  _cre.py  _doors.py  _dumps_world.py  _finalize_smile.py  _gate-check.py  _load_videos.py  _loads_world.py  _mcforum_links.py  _new_world.py  _organize_zone.py  _portals.py  _power_suit.py  _print_metrics.py  _repalette_doors.py  _rezone_items.py  _rf_scrape.py  _setup.py  _smile_autoclicker.py  _split_rooms.py  _sync_metroid_construction.py  _sync_vanilla.py  _template_sprites.py  _validate_smile.py  _verify_items.py  _vitality.py  bts_sprites.py  dread_zones.py  hash_rooms.py  import_smile.py  (+21 more)
server/skill/: admin.py  forms.py  models.py  views.py
server/smur/: __init__.py  nature.py  views.py
server/sprite/: admin.py  apps.py  cached.py  forms.py  hash_to_letter.json  models.py  urls.py  views.py
server/tracker/: admin.py  models.py  views.py
server/unrest_image/: __init__.py  max_rect.py  test.py
(+441 files in other folders)
