[tool.poetry]
name = "maptroid"
version = "0.1.0"
description = ""
authors = ["chriscauley <chris@lablackey.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
