[tool.poetry]
name = "maptroid"
version = "0.1.0"
description = ""
authors = ["chriscauley <chris@lablackey.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0.5"
ImageHash = "^4.2.1"
pytesseract = "^0.3.8"
np = "^1.0.2"
django-unrest = "^0.1.3"
psycopg2-binary = "^2.9.2"
uWSGI = "^2.0.20"
django-mailer = "^2.1"
django-unrest-schema = "^0.0.1"
social-auth-core = "^4.2.0"
social-auth-app-django = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
